# ni-shang-boliu

./: .gitmodules  README.md  cleanall.py
BouffaloLabDevCube-v1.9.0/: Changelog.txt  ReleaseNote.txt  clear.bat  clear.sh  config.toml
NiShang_Jingfei/: CMakeLists.txt  Makefile  README.md  flash_prog_cfg.ini  main.c  proj.conf
NiShang_Jingfei/hall/include/: hall.h
NiShang_Jingfei/hall/src/: main.c
NiShang_Jingfei/http/include/: http.h
NiShang_Jingfei/http/src/: main.c
NiShang_Jingfei/lcd/include/: lcd_task.h  touch_conf_user.h
NiShang_Jingfei/lcd/src/: main.c
NiShang_Jingfei/rtos/include/: lwipopts_user.h  rtos.h
NiShang_Jingfei/rtos/src/: main.c
Nishang_EightPuzzle/DataAcquisition/: CMakeLists.txt  processed.txt  proj.conf  receive.py  verified.txt
Nishang_EightPuzzle/DataAcquisition/image/: 20250731_175342_853.yuv  20250731_175342_981.yuv  20250731_175355_674.yuv  20250731_175355_887.yuv  20250731_175358_835.yuv  20250731_175358_934.yuv  20250731_175359_442.yuv  20250731_175359_527.yuv  20250731_175359_850.yuv  20250731_175400_016.yuv  20250731_175400_311.yuv  20250731_175400_705.yuv  20250731_175400_824.yuv  20250731_175400_931.yuv  20250731_175401_033.yuv  20250731_175401_493.yuv  20250731_175401_710.yuv  20250731_175401_893.yuv  20250731_175402_122.yuv  20250731_175402_216.yuv  20250731_175402_486.yuv  20250731_175402_718.yuv  (+1106 more)
Nishang_EightPuzzle/MainBoard/: CMakeLists.txt  main.c  proj.conf
Nishang_EightPuzzle/ModelBoard/: CMakeLists.txt  Makefile  best_yuv_model.h5  check_tag.py  delete.py  digit_recognition_yuv.tflite  errors.txt  main.c  processed.txt  proj.conf  receive.py  receive_big.py  tag.py  tag_big.py  train.py  train_big.py  verified.txt
Nishang_EightPuzzle/ModelBoard/image/: 20250730_204251_269.yuv  20250730_204251_367.yuv  20250730_204251_463.yuv  20250730_204251_559.yuv  20250730_204251_655.yuv  20250730_204251_747.yuv  20250730_204251_935.yuv  20250730_204252_027.yuv  20250730_204252_131.yuv  20250730_204252_216.yuv  20250730_204252_326.yuv  20250730_204252_427.yuv  20250730_204252_609.yuv  20250730_204252_937.yuv  20250730_204252_939.yuv  20250730_204254_018.yuv  20250730_204254_101.yuv  20250730_204254_155.yuv  20250730_204254_201.yuv  20250730_204254_904.yuv  20250730_204255_036.yuv  20250730_204255_108.yuv  20250730_204255_110.yuv  20250730_204255_113.yuv  20250730_204255_379.yuv  20250730_204255_477.yuv  20250730_204255_482.yuv  20250730_204255_486.yuv  20250730_204255_805.yuv  20250730_204255_884.yuv  20250730_204255_949.yuv  20250730_204256_038.yuv  20250730_204256_150.yuv  20250730_204256_305.yuv  20250730_204256_470.yuv  20250730_204256_596.yuv  20250730_204256_690.yuv  20250730_204256_839.yuv  20250730_204257_007.yuv  20250730_204257_190.yuv  (+4492 more)
Nishang_EightPuzzle/ModelBoard/neural/include/: dso_problem.h  neural_model.h
Nishang_EightPuzzle/ModelBoard/neural/src/: neural_model.c  neural_predict.cc
Nishang_EightPuzzle/ModelBoard/spi/include/: spi.h
Nishang_EightPuzzle/ModelBoard/spi/src/: main.c
Nishang_EightPuzzle_Debug/: main.c  proj.conf  receive.py  receive_big.py
Nishang_EightPuzzle_OneBoard/: CMakeLists.txt  flash_prog_cfg.ini  main.c  proj.conf
Nishang_EightQueen/: CMakeLists.txt  main.c  proj.conf
Nishang_EightQueen/audio/src/: main.c
Nishang_EightQueen/audio_es8388/src/: es8388_driver.c
Nishang_EightQueen/game/include/: game.h
Nishang_EightQueen/game/src/: main.c
Nishang_EightQueen/http/src/: main.c
Nishang_EightQueen/ir/include/: ir.h  ir_i2c.h
Nishang_EightQueen/ir/src/: i2c.c  main.c
Nishang_EightQueen/rtos/include/: FreeRTOSConfig.h  rtos.h
Nishang_EightQueen/stt/src/: main.c
Nishang_EightQueen/websocket/src/: main.c
Nishang_HanoiTower/: CMakeLists.txt  main.c  proj.conf
bouffalo_sdk_vmg0/: project.build
bouffalo_sdk_vmg0/examples/: README.md
bouffalo_sdk_vmg0/examples/peripherals/pwm_v2/pwm_software_40/: CMakeLists.txt  main.c
bouffalo_sdk_vmg0/examples/peripherals/pwm_v2/pwm_software_40/i2c/include/: i2c40.h
bouffalo_sdk_vmg0/examples/peripherals/pwm_v2/pwm_software_40/i2c/src/: i2c.c
bouffalo_sdk_vmg0/examples/peripherals/spi/spi_dma_fixed/: CMakeLists.txt  main.c  makeall.bat
bouffalo_sdk_vmg0/examples/peripherals/spi/spi_dma_fixed/master/: state.h
bouffalo_sdk_vmg0/examples/peripherals/spi/spi_dma_fixed/slave/: state.h
bouffalo_sdk_vmg0/examples/peripherals/spi/spi_dma_fixed/spi/include/: spi.h
bouffalo_sdk_vmg0/examples/work/openapi/: CMakeLists.txt  barealitest.sh  build_flash.sh  cmake-tools-kits.json  proj.conf  testtls.sh
bouffalo_sdk_vmg0/examples/work/openapi/modules/cli_cmds/include/: my_cli_cmds.h
bouffalo_sdk_vmg0/examples/work/openapi/modules/cli_cmds/src/: my_cli_cmds.c
bouffalo_sdk_vmg0/examples/work/openapi/modules/common/src/: bl_utils.c
bouffalo_sdk_vmg0/examples/work/openapi/modules/https/include/: bl_error.h  core_http_client.h  http_client.h  req_error.h
bouffalo_sdk_vmg0/examples/work/openapi/modules/https/src/: core_http_client.c  https.c
bouffalo_sdk_vmg0/examples/work/openapi/modules/openapi/include/: simpleopenapi_client.h
bouffalo_sdk_vmg0/examples/work/openapi/modules/requests/src/: requests.c
bouffalo_sdk_vmg0/examples/work/openapi/src/: main.c
police_and_thief/: Makefile  flash_prog_cfg.ini  main.c  proj.conf  touch.c  touch.h  voice.c  voice.h  wifi.c  wifi.h
police_and_thief/game/: collision.c  collision.h  enemy.c  enemy.h  evaluation.c  evaluation.h  game.c  game.h  game_engine.c  game_engine.h  game_state.c  game_state.h  input.c  input.h  player.c  river_crossing.c  river_crossing.h  settings.h  ui_manager.c  ui_manager.h
police_and_thief/hal/: hal_init.c  hal_init.h
vofa/: Document.bat  Feedback.bat  ReleaseNotes.bat
vofa/dmp/: 2025_07_17_18_33_47.dmp  2025_07_17_21_33_58.dmp  2025_07_18_12_59_12.dmp  2025_07_18_20_49_48.dmp  2025_07_23_17_38_30.dmp  2025_08_06_13_00_32.dmp  2025_08_06_16_07_18.dmp  2025_08_06_16_14_46.dmp  2025_08_06_16_30_22.dmp  2025_08_06_16_32_57.dmp  2025_08_06_16_35_29.dmp  2025_08_11_17_14_35.dmp
vofa/translations/: English.qm  TraditionalChinese.qm
(+230 files in other folders)
